--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     >About us</a
                   >
                   <a
-                    href="maps.html"
+                    href="documents.html"
                     class="text-gray-600 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium"
                     >Documents</a
                   >
